Fix autogenerated tests
