# docs/openapi/api-v1.json
@@ -52,30 +52,15 @@
               "type": "integer",
               "format": "int32"
             }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "string",
-                "format": "byte"
-              }
-            },
-            "text/json": {
-              "schema": {
-                "type": "string",
-                "format": "byte"
-              }
-            },
-            "application/*+json": {
-              "schema": {
-                "type": "string",
-                "format": "byte"
-              }
+          },
+          {
+            "name": "image",
+            "in": "query",
+            "schema": {
+              "type": "string"
             }
           }
-        },
+        ],
         "responses": {
           "200": {
             "description": "Success"
